# textual-diff-view

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: README.md  example1.rs  example2.rs  fib1.rs  fib2.rs  hello.py  tdiff.py
src/textual_diff_view/: __init__.py  _diff_view.py
tests/: test_diff_view.py  test_snapshots.py
tests/__snapshots__/test_snapshots/: test_diff_view_annotations.raw  test_diff_view_defaults.raw  test_diff_view_unified.raw  test_diff_view_unified_annotations.raw
